--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <section class="section">
                 <h2 class="section-heading">Certifications & Training</h2>
                 <ul class="certifications-list">
+                    <li><strong>Google: AI & Productivity</strong> – Santander (2024)</li>
                     <li><strong>Microsoft Power BI Data Analyst</strong> – Microsoft (2024)</li>
                     <li><strong>Zapier Marketing Automation</strong> – Udemy (2023)</li>
                     <li><strong>The Complete Guide to Airtable</strong> – Udemy (2024)</li>
@@ -204,7 +205,7 @@
             </section>
 
             <footer class="footer">
-                <p>&copy; 2024 George A. Ramos Tejada. All rights reserved.</p>
+                <p>&copy; 2025 George A. Ramos Tejada. All rights reserved.</p>
             </footer>
         </main>
     </div>
