--- a/index.html
+++ b/index.html
@@ -86,45 +86,6 @@
                 </p>
             </section>
 
-            <!-- Core Skills -->
-            <section class="section">
-                <h2 class="section-heading">Core Skills</h2>
-                <div class="skills-grid">
-                    <div class="skill-category">
-                        <h4>Data Engineering</h4>
-                        <p>ETL / ELT, Data Pipelines, Data Modeling, Data Quality</p>
-                    </div>
-                    <div class="skill-category">
-                        <h4>Data Platforms</h4>
-                        <p>Snowflake, Snowflake Containers, Iceberg Tables, Data Warehousing</p>
-                    </div>
-                    <div class="skill-category">
-                        <h4>Cloud & Orchestration</h4>
-                        <p>AWS (Glue, Lambda), Astronomer (Airflow)</p>
-                    </div>
-                    <div class="skill-category">
-                        <h4>Programming</h4>
-                        <p>Python, SQL</p>
-                    </div>
-                    <div class="skill-category">
-                        <h4>Data Processing</h4>
-                        <p>JSON ingestion & normalization, semi-structured data</p>
-                    </div>
-                    <div class="skill-category">
-                        <h4>Analytics & Visualization</h4>
-                        <p>Streamlit, Power BI</p>
-                    </div>
-                    <div class="skill-category">
-                        <h4>Databases</h4>
-                        <p>Snowflake, SQL Server</p>
-                    </div>
-                    <div class="skill-category">
-                        <h4>Other Tools</h4>
-                        <p>Git, Power Query, Airtable, Zapier</p>
-                    </div>
-                </div>
-            </section>
-
             <!-- Professional Experience -->
             <section class="section">
                 <h2 class="section-heading">Professional Experience</h2>
@@ -173,6 +134,45 @@
                     </ul>
                 </div>
             </section>
+            
+            <!-- Core Skills -->
+            <section class="section">
+                <h2 class="section-heading">Core Skills</h2>
+                <div class="skills-grid">
+                    <div class="skill-category">
+                        <h4>Data Engineering</h4>
+                        <p>ETL / ELT, Data Pipelines, Data Modeling, Data Quality</p>
+                    </div>
+                    <div class="skill-category">
+                        <h4>Data Platforms</h4>
+                        <p>Snowflake, Snowflake Containers, Iceberg Tables, Data Warehousing</p>
+                    </div>
+                    <div class="skill-category">
+                        <h4>Cloud & Orchestration</h4>
+                        <p>AWS (Glue, Lambda), Astronomer (Airflow)</p>
+                    </div>
+                    <div class="skill-category">
+                        <h4>Programming</h4>
+                        <p>Python, SQL</p>
+                    </div>
+                    <div class="skill-category">
+                        <h4>Data Processing</h4>
+                        <p>JSON ingestion & normalization, semi-structured data</p>
+                    </div>
+                    <div class="skill-category">
+                        <h4>Analytics & Visualization</h4>
+                        <p>Streamlit, Power BI</p>
+                    </div>
+                    <div class="skill-category">
+                        <h4>Databases</h4>
+                        <p>Snowflake, SQL Server</p>
+                    </div>
+                    <div class="skill-category">
+                        <h4>Other Tools</h4>
+                        <p>Git, Power Query, Airtable, Zapier</p>
+                    </div>
+                </div>
+            </section>
 
             <!-- Education -->
             <section class="section">
@@ -195,14 +195,14 @@
             </section>
 
             <!-- Additional Notes -->
-            <section class="section">
+            <!-- <section class="section">
                 <h2 class="section-heading">Additional Notes</h2>
                 <ul class="notes-list">
                     <li>Strong analytical mindset with hands-on experience bridging <strong>data engineering and analytics</strong>.</li>
                     <li>Comfortable working in agile, cloud-based environments and collaborating with cross-functional teams.</li>
                     <li>Focused on building <strong>scalable, reliable, and business-oriented data platforms</strong>.</li>
                 </ul>
-            </section>
+            </section> -->
 
             <footer class="footer">
                 <p>&copy; 2025 George A. Ramos Tejada. All rights reserved.</p>
