feat: Add Projects section to CV with links to GitHub repositories

--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
                         <p><strong>English</strong> - Professional</p>
                     </div>
                 </div>
+
+                <div class="projects-sidebar">
+                    <h3 class="section-title">Projects</h3>
+                    <div class="projects-buttons">
+                        <a href="https://github.com/GRamos199/call-center-analytics" target="_blank" rel="noopener noreferrer" class="project-btn">
+                            <span class="project-icon">📊</span>
+                            <span class="project-name">Call Center Analytics</span>
+                        </a>
+                        <a href="https://github.com/GRamos199/data-lakehouse-simulation" target="_blank" rel="noopener noreferrer" class="project-btn">
+                            <span class="project-icon">🏗️</span>
+                            <span class="project-name">Data Lakehouse Simulation</span>
+                        </a>
+                        <a href="https://github.com/GRamos199/data-quality-framework" target="_blank" rel="noopener noreferrer" class="project-btn">
+                            <span class="project-icon">✅</span>
+                            <span class="project-name">Data Quality Framework</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </aside>
 
